# RAG-learning

./: Fix-Kernel.ps1  README.md  pyproject.toml  requirements.txt
DataIngestionPipeline/: DataIngestion.ipynb  dataparsingforDOC.ipynb  process.ipynb
DataIngestionPipeline/Hybridsearch/: hybrid.ipynb
DataIngestionPipeline/data/text_files/: ml.txt  rag.txt
DataIngestionPipeline/data/word_files/: intro.docx
ImplementationOfRAG/: FullImplementation.ipynb
ImplementationOfRAG/textfiles/: doc0.txt  doc1.txt  doc2.txt  doc3.txt  doc4.txt
ImplementationOfRAG/vec_dir/: chroma.sqlite3
embeddings/: embedding.ipynb  openaiembedding.ipynb
multimodel rag/: 1-multimodalopenai.ipynb
